--- a/nb.ipynb
+++ b/nb.ipynb
@@ -14,6 +14,18 @@
     "4. **Prediction Function:** Apply the trained model to new passenger inputs to estimate survival probability."
    ],
    "id": "1e71f5863f64bc19"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Import necessary modules\n",
+    "import pandas as pd                # For handling data\n",
+    "import matplotlib.pyplot as plt    # For visualisations"
+   ],
+   "id": "3b66459f0fa6698f"
   }
  ],
  "metadata": {},
