--- a/nb.ipynb
+++ b/nb.ipynb
@@ -1,8 +1,9 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "1e71f5863f64bc19",
+   "metadata": {},
    "source": [
     "# An Exploratory Analysis of the Titanic Dataset\n",
     "\n",
@@ -12,23 +13,45 @@
     "2. **Exploratory Analysis:** Examine relationships between features and survival.\n",
     "3. **Model Training:** Train a classification model using the prepared data.\n",
     "4. **Prediction Function:** Apply the trained model to new passenger inputs to estimate survival probability."
-   ],
-   "id": "1e71f5863f64bc19"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "3b66459f0fa6698f",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Import necessary modules\n",
     "import pandas as pd                # For handling data\n",
     "import matplotlib.pyplot as plt    # For visualisations"
-   ],
-   "id": "3b66459f0fa6698f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa1dc0c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "titanic = pd.read_csv(\"dataset.csv\")\n",
+    "df = (\n",
+    "    titanic\n",
+    "    .drop([\"Ticket\", \"Fare\", \"Cabin\", \"Embarked\", \"Name\"], axis=1)  \n",
+    "    .dropna()\n",
+    "    .reset_index(drop=True)                                         \n",
+    ")\n",
+    "\n",
+    "df.head()"
+   ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
