--- a/nb.ipynb
+++ b/nb.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3b66459f0fa6698f",
    "metadata": {},
    "outputs": [],
@@ -29,10 +29,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fa1dc0c5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PassengerId  Survived  Pclass  Sex   Age  SibSp  Parch\n",
+       "0            1         0       3    1  22.0      1      0\n",
+       "1            2         1       1    0  38.0      1      0\n",
+       "2            3         1       3    0  26.0      0      0\n",
+       "3            4         1       1    0  35.0      1      0\n",
+       "4            5         0       3    1  35.0      0      0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "titanic = pd.read_csv(\"dataset.csv\")\n",
@@ -43,13 +142,261 @@
     "    .reset_index(drop=True)                                         \n",
     ")\n",
     "\n",
+    "\n",
+    "# maping male & female to 1 & 0\n",
+    "df['Sex'] = df['Sex'].map({\"male\": 1, \"female\": 0})\n",
+    "\n",
+    "# observing first 5\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f135b68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy': 0.7692307692307693, 'roc_auc': 0.8623732251521298}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.metrics import accuracy_score, roc_auc_score\n",
+    "import pickle\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "def train_model(df: pd.DataFrame = df):\n",
+    "\n",
+    "    # features\n",
+    "    X = df[[\"Pclass\", \"Sex\", \"Age\", \"SibSp\", \"Parch\"]]\n",
+    "    # target\n",
+    "    y = df[\"Survived\"].astype(int)\n",
+    "\n",
+    "\n",
+    "    # Train/test split with test size being 20% and training 80% (very common especially with small sets)\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, stratify=y)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    # preprocessing the numbers (scaling and imputing)\n",
+    "    numeric_pipeline = Pipeline([\n",
+    "        (\"imputer\", SimpleImputer(strategy=\"median\")), # median imputation for Age (and any numeric missing)\n",
+    "        (\"scaler\", StandardScaler()), # normalizing all numeric features using the Standard Scalar\n",
+    "    ])\n",
+    "\n",
+    "\n",
+    "    # model pipeline (using logisticRegression)\n",
+    "    pipeline = Pipeline([\n",
+    "        (\"prep\", numeric_pipeline),\n",
+    "        (\"clf\", LogisticRegression(solver=\"liblinear\", class_weight=\"balanced\"))\n",
+    "        # class_weight=\"balanced\" -> balances the model for imbalanced datasets by assigining higher importance weights to under represented classes\n",
+    "        # This dataset is definitly unbalanced as a simple df.hist() shows there's more male records than female ones.\n",
+    "    ])\n",
+    "\n",
+    "    pipeline.fit(X_train, y_train) # fitting the model to the data\n",
+    "    # the goal here is that the model learns the linear relationship between all the features\n",
+    "    # and generalizes (not overfit or underfit) so it can perform on unseen data which i'll test in blocks below\n",
+    "\n",
+    "    # Evaluating the model\n",
+    "    y_pred = pipeline.predict(X_test)\n",
+    "    y_proba = pipeline.predict_proba(X_test)[:, 1]\n",
+    "    acc = accuracy_score(y_test, y_pred)\n",
+    "    auc = roc_auc_score(y_test, y_proba)\n",
+    "\n",
+    "    # saving the model so we don't have to train it again every time we run an inference\n",
+    "    with open(\"model.pkl\", \"wb\") as f:\n",
+    "        pickle.dump(pipeline, f)\n",
+    "\n",
+    "    return pipeline, {\"accuracy\": acc, \"roc_auc\": auc}\n",
+    "\n",
+    "\n",
+    "\n",
+    "# training the model and unpacking the tuple \n",
+    "model, metrics = train_model()\n",
+    "\n",
+    "metrics # viewing metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "f3fec2e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.14/lib/python3.14/site-packages/sklearn/utils/validation.py:2749: UserWarning: X does not have valid feature names, but SimpleImputer was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>estimates</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.143793</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.925977</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.713277</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.934955</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.116550</td>\n",
+       "      <td>1</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Pclass  estimates  Sex   Age  SibSp  Parch\n",
+       "0       3   0.143793    1  22.0      1      0\n",
+       "1       1   0.925977    0  38.0      1      0\n",
+       "2       3   0.713277    0  26.0      0      0\n",
+       "3       1   0.934955    0  35.0      1      0\n",
+       "4       3   0.116550    1  35.0      0      0"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "'''\n",
+    "this function returns the survival probability of a passenger with an accuracy of 76%\n",
+    "which we know from the lecture's is the sweet spot.\n",
+    "'''\n",
+    "\n",
+    "def estimate_survival(record: pd.DataFrame):\n",
+    "    if not os.path.exists(\"model.pkl\"):\n",
+    "        raise ValueError(\"Model File: (model.pkl) not found!\")\n",
+    "\n",
+    "    with open(\"model.pkl\", \"rb\") as f: # load the model\n",
+    "        model = pickle.load(f)\n",
+    "\n",
+    "    return model.predict_proba(record.values)[:,1]\n",
+    "\n",
+    "\n",
+    "\n",
+    "records = df[[\"Pclass\", \"Sex\", \"Age\", \"SibSp\", \"Parch\"]]\n",
+    "\n",
+    "records.insert(1, 'estimates', estimate_survival(records))\n",
+    "\n",
+    "\n",
+    "records.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45526e24",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bdccd0a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
